--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ header {
 
 /*-- banner --*/
 .banner{
-	background:url(../images/b1.jpg) no-repeat 0px 0px;
+	background:url(../images/b1.webp) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -160,7 +160,7 @@ header {
 	position: relative;
 }
 .banner-layer {
-    background: url(../images/layer.png)repeat;
+    background: url(../images/layer.webp)repeat;
     background: rgba(0, 0, 0, 0.5);
     min-height: 765px;
 }
@@ -458,7 +458,7 @@ h3.heading:after {
 
 /*-- blog -*/
 .blog {
-    background: url(../images/blog.jpg) no-repeat 0px 0px;
+    background: url(../images/blog.webp) no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -585,7 +585,7 @@ a.sb {
 /*-- clients--*/
 .testimonials {
     background: #333;
-	background:url(../images/test.jpg) no-repeat 0px 0px;
+	background:url(../images/test.webp) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -781,7 +781,7 @@ footer {
     border: none;
     text-indent: 100%;
     border: 2px solid #191919;
-    background: #191919 url(../images/arr.png) no-repeat 0px 0px;
+    background: #191919 url(../images/arr.webp) no-repeat 0px 0px;
     border-radius: 50%;
 }
 #toTopHover {
